--- a/delivery/charts/hello-server/values.yaml
+++ b/delivery/charts/hello-server/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: ediri/hello-server-tekton
+  repository: ediri/hello-server
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.1.0"
+  tag: "latest"
 
 imagePullSecrets: [ ]
 nameOverride: ""
