--- a/delivery/charts/hello-server/values.yaml
+++ b/delivery/charts/hello-server/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: ediri/hello-server
+  repository: dirien/hello-server
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "0.1.1"
