--- a/hello-server/DockerfileV0.1.0
+++ b/hello-server/DockerfileV0.1.0
@@ -1,4 +1,3 @@
-
 FROM golang:alpine AS builder
 
 # Set necessary environment variables needed for our image
@@ -11,26 +10,26 @@ ENV GO111MODULE=on \
 WORKDIR /build
 
 # Copy and download dependency using go mod
-# COPY go.mod .
-# COPY go.sum .
-# RUN go mod download
+ COPY go.mod .
+ COPY go.sum .
+ RUN go mod download
 
 # Copy the code into the container
 COPY . .
 
 # Build the application
-RUN go build -o helloserver ./helloserver.go
+RUN go build -o hello ./helloserver.go
 
 # Move to /dist directory as the place for resulting binary folder
 WORKDIR /dist
 
 # Copy binary from build to main folder
-RUN cp /build/helloserver .
+RUN cp /build/hello .
 
 # Build a small image
 FROM scratch
 
-COPY --from=builder /dist/helloserver /
+COPY --from=builder /dist/hello /
 COPY ./static  /static
 COPY ./overview.html  /overview.html
 
@@ -38,4 +37,4 @@ COPY ./overview.html  /overview.html
 EXPOSE 9000
 
 # Command to run when starting the container
-CMD ["/helloserver", "0.1.0"]
+CMD ["/hello", "0.1.0"]
